# ttype

./: .gitignore  CMakeLists.txt
notes/: 2024.08.04 Journal: Potential Data Structures.md  2024.08.05 Journal: Potential Data Structures.md  2024.08.07 Journal: Implementation of the Gap Buffer.md
src/: editor-interface.h  editor.h  gap-buffer.cc  gap-buffer.h  main.cc
tests/: gap-buffer_test.cc
